# seedwing-proxy

./: Cargo.toml  README.adoc  seedwing.toml
.github/workflows/: release.yml  rust.yml
docs/: high-level.graffle
policy/: proxy.dog
policy/maven/: default.dog
src/: errors.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  policy.rs  proxy.rs  repositories.rs
src/crates/: mod.rs
src/crates/api/v1/: mod.rs
src/policy/: context.rs  mod.rs  opa.rs
src/proxy/: client.rs  mod.rs
src/repositories/: mod.rs
src/repositories/crates/: git.rs  mod.rs  sparse.rs
src/repositories/crates/api/: mod.rs
src/repositories/crates/api/v1/: mod.rs
src/repositories/gems/: mod.rs
src/repositories/maven/: mod.rs
src/repositories/npm/: mod.rs
src/repositories/pip/: mod.rs
src/sigstore/: mod.rs
src/ui/: index.html  mod.rs  style.css
