[package]
name = "seedwing-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
crates_io_api = "0.8.1"
awc = { version = "3.0.1", features = [ "rustls"] }
sha256 = { version = "1.0.3" }
sigstore = { version = "0.5", default-features = false  }
url = "2.1.0"
serde = "1.0.145"
serde_json = "1.0.85"
toml = "0.5.9"
indexmap = { version = "1.9.1", features = [ "serde"] }
clap = { version = "4.0.8", features = [ "derive"] }
log = "0.4.17"
env_logger = "0.9.1"

handlebars = "4.3.4"

fs2 = "0.4.3"
git2 = "0.16.1"
thiserror = "1.0.38"
substring = "1.4.5"
bytes = "1.3.0"
tokio = "1.24.2"
tokio-stream = "0.1.11"
